# hypermodern-python-cdavis

./: .coverage  .flake8  README.md  coverage.xml  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml  test-pypi.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: hypermodern_python_cdavis.console.imports  tests.test_console.imports  tests.test_wikipedia.imports
.pytype/pyi/: conf.pyi
.pytype/pyi/tests/: conftest.pyi  test_console.pyi  test_wikipedia.pyi
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  reference.rst.txt
src/hypermodern_python_cdavis/: console.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
